# whisper-docker

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CUSTOM_API.md  DOCKER_COMPOSE_USAGE.md  Dockerfile  Dockerfile.windows  LOGGING_METRICS_SUMMARY.md  Makefile  README.md  TODO.md  async_storage.py  build.sh  check_pipeline.py  docker-compose.prod.yml  docker-compose.simple.yml  docker-compose.yml  entrypoint.sh  file_security.py  generate_client.py  pyproject.toml  requirements.txt  test_api.py  test_async_api.py  test_concurrent.py  test_concurrent.sh  test_custom_api.py  test_logging.py  test_metrics_fix.py  transcribe  transcribe.py  transcription_core.py  web_service.py  whisper_client.py
.github/workflows/: docker-build.yml  release.yml  test.yml
spec/: custom-transcription-api.md
static/: index.html
storage/: .gitkeep
